--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -69,6 +69,7 @@
 							<li>Added a new ship type</li>
 							<li>Added heat seeking lasers</li>
 							<li>Reworked boost animation</li>
+							<li>Revamped unlocks system</li>
 							<li>Now uses vectors for accurate diagonal movement</li>
 							<li>New cython versions for Intel and Apple Silicon based Macs</li>
 						</td>
