--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -60,6 +60,13 @@
 				</thead>
 				<tbody>
 					<tr>
+						<td style="text-align: center;">v0.4.9</td>
+						<td>
+							<li>Expanded obstacle mechanics</li>
+							<li>Revamped unlocks system</li>
+						</td>
+					</tr>
+					<tr>
 						<td style="text-align: center;">v0.4.8</td>
 						<td>
 							<li>Added controller support</li>
