--- a/navigator.html
+++ b/navigator.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta property="og:image" content="https://github.com/pstlo/pstlo.github.io/raw/main/Assets/navIcon.png">
+	<meta name="description" content="Simple and addictive arcade game">
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M4WSX0D7S"></script>
 	<script>
