--- a/navigator/home.html
+++ b/navigator/home.html
@@ -12,8 +12,9 @@
 	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<meta name="description" content="Simple and addictive arcade game">
+	<meta name="description" content="Navigator homepage">
 	<meta name="author" content="Mike Pistolesi">
+	<meta property="og:image" content="https://github.com/pstlo/pstlo.github.io/raw/main/Assets/navIcon.png">
 	<title>Navigator</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,8 +68,6 @@
 		text-decoration: none;
 		border-bottom: none;
 		color: #07e821;
-	
-		
 	}
 
 	#home a:hover {
@@ -76,7 +75,6 @@
 		text-decoration: none;
 		border-bottom: none;
 	}
-	
 </style>
 <body>
 	<img id="bouncingIcon" src ="Assets/Ship.png"></div>
