--- a/navigator.html
+++ b/navigator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta property="og:title" content="Navigator">
 	<meta property="og:image" content="https://github.com/pstlo/pstlo.github.io/raw/main/Assets/navIcon.png">
 	<meta name="description" content="Simple and addictive arcade game">
 	<!-- Google tag (gtag.js) -->
