--- a/navigator/home.html
+++ b/navigator/home.html
@@ -14,6 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="description" content="Navigator homepage">
 	<meta name="author" content="Mike Pistolesi">
+	<meta property="og:title" content="Navigator Home">
 	<meta property="og:image" content="https://github.com/pstlo/pstlo.github.io/raw/main/Assets/navIcon.png">
 	<title>Navigator</title>
 	<link rel="stylesheet" href="style.css">
