--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -62,6 +62,7 @@
 					<tr>
 						<td style="text-align: center;">v0.4.9</td>
 						<td>
+							<li>Added online leaderboard</li>
 							<li>Expanded obstacle mechanics</li>
 							<li>Revamped unlocks system</li>
 						</td>
