--- a/navigator/home.html
+++ b/navigator/home.html
@@ -90,10 +90,10 @@
 		<p>Navigate between randomly placed tokens like the game "Snake", with the twist of avoiding increasingly unforgiving asteroids- and whatever else may be out there... this is very much a work in progress, and any suggestions or feedback would be welcome  :)</p>
 		<nav>
 			<button style= "background-color:#0bba1d;" onclick="location.href='downloads.html'">Latest Releases</button>
-			<button style= "background-color:#0bba1d;" onclick="location.href='leaderboard.html'">Leaderboard</button>
+			<button style= "background-color:#04d0eb;" onclick="location.href='leaderboard.html'">Leaderboard</button>
 			<button style= "background-color:#7F00FF;" onclick="location.href='changes.html'">Changes</button>
 			<button title="https://github.com/pstlo/Navigator" style= "background-color:#F11A0E;" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
-			<button style= "background-color:#F96E06;" onclick="window.location.href='feedback.html'">Feedback</button>
+			<button style= "background-color:#f96e06;" onclick="window.location.href='feedback.html'">Feedback</button>
 			<button style= "background-color:#1F0AF5;" onclick="location.href='support.html'">Support the project</button>
 		</nav>
 		<div id="socialButtons">
