--- a/navigator/roadmap.html
+++ b/navigator/roadmap.html
@@ -64,10 +64,10 @@
 			<li><del>Lasers!</del></li>
 			<li><del>Original soundtrack</del></li>
 			<li><del>Controller support</del></li>
+			<del><li>Global leaderboard</del></li>
 			<li>More level types and environments</li>
 			<li>Lots more unlockable ship types and skins</li>
 			<li>Performance and optimization improvements</li>
-			<li>Global leaderboard</li>
 			<li>Code signing</li>
 			<li>Audio and visual overhaul</li>
 			<li>Settings menu</li>
