--- a/navigator/leaderboard.html
+++ b/navigator/leaderboard.html
@@ -85,6 +85,6 @@
       });
     }
   </script>
-<button id = "backButton" onclick="location.href='home.html'">Back</button>
+<button id = "backButton" style='margin-top:10px' onclick="location.href='home.html'">Back</button>
 </body>
 </html>
