--- a/navigator/leaderboard.html
+++ b/navigator/leaderboard.html
@@ -21,13 +21,33 @@
 	<link rel="shortcut icon" href="Assets/Icon.png" type="image/png">
 </head>
 <style>
-	body{
-		max-width:700px;
+
+	#leaderboard {
+		z-index:2;
+		height:800px;
+		display: flex;
+		flex-direction: column;
+		align-items:center;
+		text-align:center;
 	}
 
-    #leaderboard-body {
-      max-height: 200px;
-    }
+	#leaders {
+		height: 500px;
+		overflow-y: auto;
+		margin-bottom: 1%;
+		max-width: 200%;
+		position:relative;
+	}
+
+	#leaders td {text-align:left;}
+
+	#leaders::-webkit-scrollbar-thumb {
+	  background-color: #541df5;
+	  border-radius: 10px;
+	}
+
+	#leaders::-webkit-scrollbar-thumb:hover {background-color: #7145f5;}
+
 </style>
 <body>
   <h1>Leaderboard</h1>
