--- a/navigator/leaderboard.html
+++ b/navigator/leaderboard.html
@@ -22,7 +22,7 @@
 </head>
 <style>
 	#leaders {
-		height: 500px;
+		max-height: 500px;
 		overflow-y: auto;
 		margin-bottom: 1%;
 		max-width: 200%;
