--- a/navigator/roadmap.html
+++ b/navigator/roadmap.html
@@ -43,6 +43,7 @@
 		max-width:auto;
 		padding-bottom: 3px;
 		padding-top: 3px;
+		text-decoration:none;
 	}
 
 	#roadmap del {color: #07e821;}
@@ -64,7 +65,7 @@
 			<li><del>Lasers!</del></li>
 			<li><del>Original soundtrack</del></li>
 			<li><del>Controller support</del></li>
-			<del><li>Global leaderboard</del></li>
+			<li><del>Global leaderboard</del></li>
 			<li>More level types and environments</li>
 			<li>Lots more unlockable ship types and skins</li>
 			<li>Performance and optimization improvements</li>
