--- a/navigator/home.html
+++ b/navigator/home.html
@@ -11,6 +11,7 @@
 		gtag('config', 'G-5M4WSX0D7S');
 	</script>
 	<meta charset="UTF-8">
+	<meta name="google-site-verification" content="PyJjp8Olnu1A9ZzVW3X49YOeLFP4HE99xRnXYVIVR78" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="description" content="Home page">
 	<meta name="author" content="Mike Pistolesi">
