--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="google-site-verification" content="PyJjp8Olnu1A9ZzVW3X49YOeLFP4HE99xRnXYVIVR78" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="description" content="My page">
 	<meta name="author" content="Mike Pistolesi">
@@ -241,7 +242,7 @@
 				<ul>
 					<li>Discrete Mathematics</li>
 					<li>Algorithms</li>
-					<li>Data structures</li>
+					<li>data structures</li>
 					<li>Computer organization</li>
 					<li>Assembly language</li>
 				</ul>
