--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -56,6 +56,9 @@
 							<li>Added online leaderboard</li>
 							<li>Expanded obstacle mechanics</li>
 							<li>Revamped unlocks system</li>
+							<li>Animated spaceship support</li>
+							<li>Menu performance optimizations</li>
+							<li>New trophy skin exclusive to record holder</li>
 						</td>
 					</tr>
 					<tr>
