--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 				<ul>
 					<li>Discrete Mathematics</li>
 					<li>Algorithms</li>
-					<li>data structures</li>
+					<li>Data structures</li>
 					<li>Computer organization</li>
 					<li>Assembly language</li>
 				</ul>
