--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -54,11 +54,13 @@
 						<td style="text-align: center;">v0.4.9</td>
 						<td>
 							<li>Added online leaderboard</li>
+							<li>Refreshed home screen</li>
 							<li>Expanded obstacle mechanics</li>
 							<li>Revamped unlocks system</li>
 							<li>Animated spaceship support</li>
 							<li>Menu performance optimizations</li>
 							<li>New trophy skin exclusive to record holder</li>
+							<li>New nuke power-up</li>
 						</td>
 					</tr>
 					<tr>
