--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -51,6 +51,12 @@
 				</thead>
 				<tbody>
 					<tr>
+						<td style="text-align: center;">v0.5.0</td>
+						<td>
+							<li>Added hanger</li>
+						</td>
+					</tr>
+					<tr>
 						<td style="text-align: center;">v0.4.9</td>
 						<td>
 							<li>Added online leaderboard</li>
