--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -51,6 +51,13 @@
 				</thead>
 				<tbody>
 					<tr>
+						<td style="text-align: center;">v0.5.1</td>
+						<td>
+							<li>Improved code structure</li>
+							<li>Saves to appdata (Windows version)</li>
+						</td>
+					</tr>
+					<tr>
 						<td style="text-align: center;">v0.5.0</td>
 						<td>
 							<li>Added hanger</li>
