--- a/navigator/home.html
+++ b/navigator/home.html
@@ -111,12 +111,9 @@
 				<img src="Assets/tokIcon.png">
 			</button>
 		</div>
-		<h3 style="margin-bottom: 0px; font-size: 30px;">
-			<span style="font-family: monospace;">&copy;</span>2023 <a href="../index.html">Mike Pistolesi</a>
-		</h3>
-
-		<p style = "font-size:45%;">This page uses Google analytics</p>
+		<h5><span style="font-family: monospace;">&copy;</span>2023 <a href="../index.html">Mike Pistolesi</a></h5>
+		<h5>With art by <a href="https://guettagraphics.github.io">Collin Guetta</a></h5>
+		<p style = "font-size:50%; margin-top:20px;">This page uses Google analytics</p>
 	</div>
-
 </body>
 </html>
