--- a/navigator/leaderboard.html
+++ b/navigator/leaderboard.html
@@ -78,6 +78,6 @@
 			}
 		</script>
 	</div>
-	<button id = "backButton" style='margin-top:10px' onclick="location.href='home.html'">Back</button>
+	<button id = "backButton" style='margin-top:10px' onclick="location.href='/'">Back</button>
 </body>
 </html>
