--- a/navigator/roadmap.html
+++ b/navigator/roadmap.html
@@ -80,6 +80,6 @@
 		</div>
 		<p>Note: this is a slightly optimistic layout of my plans for the project, in no particular order. Nothing, other than what is specifically marked as completed, is guaranteed. Everything else is subject to change.</p>
 	</div>
-	<button id = "backButton" style = "z-index:2" onclick="location.href='support.html'">Back</button>
+	<button id = "backButton" style = "z-index:2" onclick="location.href='support'">Back</button>
 </body>
 </html>
