--- a/navigator/index.html
+++ b/navigator/index.html
@@ -90,12 +90,12 @@
 		</div>
 		<p>Navigate between randomly placed tokens like the game "Snake", with the twist of avoiding increasingly unforgiving asteroids- and whatever else may be out there... this is very much a work in progress, and any suggestions or feedback would be welcome  :)</p>
 		<nav>
-			<button style= "background-color:#0bba1d;" onclick="location.href='downloads.html'">Latest Releases</button>
-			<button style= "background-color:#04d0eb;" onclick="location.href='leaderboard.html'">Leaderboard</button>
-			<button style= "background-color:#7F00FF;" onclick="location.href='changes.html'">Changes</button>
+			<button style= "background-color:#0bba1d;" onclick="location.href='downloads'">Latest Releases</button>
+			<button style= "background-color:#04d0eb;" onclick="location.href='leaderboard'">Leaderboard</button>
+			<button style= "background-color:#7F00FF;" onclick="location.href='changes'">Changes</button>
 			<button title="https://github.com/pstlo/Navigator" style= "background-color:#F11A0E;" onclick="window.location.href='https://github.com/pstlo/Navigator'">Repository</button>
-			<button style= "background-color:#f96e06;" onclick="window.location.href='feedback.html'">Feedback</button>
-			<button style= "background-color:#1F0AF5;" onclick="location.href='support.html'">Support the project</button>
+			<button style= "background-color:#f96e06;" onclick="window.location.href='feedback'">Feedback</button>
+			<button style= "background-color:#1F0AF5;" onclick="location.href='support'">Support the project</button>
 		</nav>
 		<div id="socialButtons">
 			<button id="socialButton" title="playNavGame@gmail.com" onclick="window.location.href='mailto:playNavGame@gmail.com'">
@@ -111,7 +111,7 @@
 				<img src="Assets/tokIcon.png">
 			</button>
 		</div>
-		<h5><span style="font-family: monospace;">&copy;</span>2023 <a href="../index.html">Mike Pistolesi</a></h5>
+		<h5><span style="font-family: monospace;">&copy;</span>2023 <a href="../">Mike Pistolesi</a></h5>
 		<h5>With art by <a href="https://guettagraphics.github.io">Collin Guetta</a></h5>
 		<p style = "font-size:50%; margin-top:20px;">This page uses Google analytics</p>
 	</div>
