--- a/navigator/support.html
+++ b/navigator/support.html
@@ -51,7 +51,7 @@
 			</video>
 			<p>Supporters will have their name displayed dynamically in the credits menu with size scaled to donation amount. Help take Navigator to new heights!</p>
 		</div>
-		<button id="roadmapButton" style = "background-color: #c400ff" onclick="location.href='roadmap.html'"><del>Road</del> Spacemap</button>
+		<button id="roadmapButton" style = "background-color: #c400ff" onclick="location.href='roadmap'"><del>Road</del> Spacemap</button>
 		<button id="donateButton" style = "background-color:#2b0df2;" onclick="window.location.href='https://paypal.me/mikepistolesi?country.x=US&locale.x=en_US'">Donate</button>
 		<button id="backButton" onclick="location.href='/'">Back</button>
 	</div>
