--- a/navigator/changes.html
+++ b/navigator/changes.html
@@ -286,6 +286,6 @@
 				</tbody>
 			</table>
 		</div>
-		<button id = "backButton" style = "z-index:2" onclick="location.href='/'">Back</button>
+		<button id = "backButton" style = "z-index:2" onclick="location.href='/navigator'">Back</button>
 </body>
 </html>
