--- a/navigator/support.html
+++ b/navigator/support.html
@@ -53,7 +53,7 @@
 		</div>
 		<button id="roadmapButton" style = "background-color: #c400ff" onclick="location.href='roadmap'"><del>Road</del> Spacemap</button>
 		<button id="donateButton" style = "background-color:#2b0df2;" onclick="window.location.href='https://paypal.me/mikepistolesi?country.x=US&locale.x=en_US'">Donate</button>
-		<button id="backButton" onclick="location.href='/'">Back</button>
+		<button id="backButton" onclick="location.href='/navigator'">Back</button>
 	</div>
 </body>
 </html>
