--- a/navigator/downloads.html
+++ b/navigator/downloads.html
@@ -72,7 +72,7 @@
 			</tbody>
 		</table>
 		<h4 style="margin-bottom:0px">To start navigating, download and extract the latest release above or run the game directly from the <a href="https://github.com/pstlo/Navigator/archive/refs/heads/main.zip">source code</a><h4>
-		<button id = "backButton" style = "z-index:2" onclick="location.href='/'">Back</button>
+		<button id = "backButton" style = "z-index:2" onclick="location.href='/navigator'">Back</button>
 	</div>
 </body>
 </html>
