--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 		<div id = "projects">
 			<h2>Projects</h2>
 			<div style = "position:relative; top:15px;">
-				<button title="Play Navigator" style="height: 80px; width:80px; border-radius:100px;" onclick="window.location.href='navigator'">
+				<button title="Play Navigator" style="height: 80px; width:80px; border-radius:100px;" onclick="window.location.href='navigator/'">
 					<img style = "bottom:10px;height:140%; right: 12px;;" src="Assets/navIcon.png">
 				</button>
 			</div>
