--- a/navigator.html
+++ b/navigator.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Redirect to Navigator homepage -->
 <html>
 <head>
 	<meta property="og:title" content="Navigator">
@@ -13,6 +12,6 @@
 		gtag('js', new Date());
 		gtag('config', 'G-5M4WSX0D7S');
 	</script>
-	<meta http-equiv="refresh" content="0; URL=./navigator/">
+	<meta http-equiv="refresh" content="0; URL=./navigator">
 </head>
 </html>
