--- a/navigator.html
+++ b/navigator.html
@@ -12,6 +12,6 @@
 		gtag('js', new Date());
 		gtag('config', 'G-5M4WSX0D7S');
 	</script>
-	<meta http-equiv="refresh" content="0; URL=./navigator">
+	<meta http-equiv="refresh" content="0; URL=./navigator/">
 </head>
 </html>
