--- a/navigator/feedback.html
+++ b/navigator/feedback.html
@@ -43,7 +43,7 @@
 <body>
 	<div id = "feedback">
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfUc_bu8MgiTmUyxTcN1nsVrm1zNW51oc2bYe39NJlFcZdTtg/viewform?embedded=true" width="600" height="950" frameborder="3" marginheight="0" marginwidth="0">Loading…</iframe>
-		<button onclick="location.href='/navigator'">Back</button>
+		<button onclick="location.href='/navigator/'">Back</button>
 	</div>
 </body>
 </html>
