--- a/navigator/leaderboard.html
+++ b/navigator/leaderboard.html
@@ -78,6 +78,6 @@
 			}
 		</script>
 	</div>
-	<button id = "backButton" style='margin-top:10px' onclick="location.href='/navigator'">Back</button>
+	<button id = "backButton" style='margin-top:10px' onclick="location.href='/navigator/'">Back</button>
 </body>
 </html>
