--- a/navigator/leaderboard.html
+++ b/navigator/leaderboard.html
@@ -64,7 +64,7 @@
 			function generateLeaderboard(leaderboardData) {
 			  var leaderboardTable = document.getElementById("leaderboard-body");
 
-			  leaderboardData.forEach(function(player, index) { // Add 'index' parameter
+			  leaderboardData.forEach(function(player, index) {
 				var row = leaderboardTable.insertRow();
 				var numberCell = row.insertCell();
 				var nameCell = row.insertCell();
