--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="google-site-verification" content="PyJjp8Olnu1A9ZzVW3X49YOeLFP4HE99xRnXYVIVR78" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="description" content="My page">
+	<meta property="og:title" content="Mike's Page">
 	<meta name="author" content="Mike Pistolesi">
 	<title>Mike</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
